--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+html, body, #root, .App {
+  height: 100%;
+  margin: 0px;
+  /* display: block; */
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +14,60 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+
+.title-container {
+  height: 15%;
+  display: block;
+  align-content: center;
+  justify-content: center;
+  text-align: center;
+  border-style: dotted;
+  margin-top: auto;
+}
+
+.title {
+  margin: 0px auto;
+  font-size: 30px;
+}
+
+.subtitle {
+  margin: 0px auto;
+  font-size: 20px;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 75%;
+  background-color: rgb(43, 226, 67);
+}
+
+.prompt {
+  width: 10vw;
+  height: 10vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  background-color: brown;
+}
+
+.prompt:hover {
+  cursor: pointer;
+}
+
+
+/* APP MOBILE  */
+@media screen and (max-width: 420px) {
+  .prompt {
+    width: 40vw;
+    height: 40vw;
+  }
 }
