--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ html, body, #root, .App {
   margin: 0px;
   /* display: block; */
   font-family: 'Roboto Condensed', sans-serif;
-  background-color: #574B60;
+  background-color: #CFCFCD;
 }
 
 body {
@@ -20,26 +20,37 @@ body {
     monospace;
 } */
 
+svg {
+  height: 300;
+  width: 300;
+}
+
 
 .title-container {
   height: 15%;
-  display: block;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  background-color: #9A879D;
+}
+
+.title-contents {
+  display: flex;
   align-content: center;
   justify-content: center;
   text-align: center;
-  border-style: dotted;
-  margin-top: auto;
-  background-color: #3F334D;
+  flex-direction: column;
 }
 
 .title {
-  margin: 0px auto;
-  font-size: 30px;
+  margin-top: 1vw;
+  font-size: 80px;
+  font-weight: 800;
 }
 
 .subtitle {
   margin: 0px auto;
-  font-size: 20px;
+  font-size: 30px;
 }
 
 .home {
@@ -50,23 +61,191 @@ body {
 }
 
 .home button {
-  width: 700px;
+  width: 600px;
   margin-top: 100px;
-  /* background-color: #6b7cff; */
-  background-color: #C0C5C1;
-  color: #7D8491;
+  background-color: #563440;
+  color: #D7DEDC;
   border-radius: 5px;
 }
 
+.home button span svg {
+  width: 200px;
+}
+
+.home button p {
+  font-size: 50px;
+}
+
+.home button :hover {
+  background-color: #D7DEDC;
+  color: #563440;
+}
+
+.modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.popup {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 50px;
+  margin: auto;
+  background-color: rgb(121, 197, 7);
+}
+
+.camera-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-top: 50px;
+}
+
+div#interactive.viewport {
+  width: 700px;
+  height: 300px;
+}
+
+video {
+  width: 700px;
+}
+
+.back-button {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 
 /* APP MOBILE  */
 @media screen and (max-width: 420px) {
   .home {
+    bottom: 100%;
     display: block;
   }
 
-  svg {
-    width: 100;
-    height: 100;
+  .home button {
+    width: 250px;
+    height: 150px;
+    margin-top: 50px;
+    border-radius: 5px;
+  }
+
+  .home button span svg {
+    width: 75px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .home button p {
+    margin: 0;
+    font-size: 30px;
+  }
+
+  .title {
+    font-size: 40px;
+  }
+  .subtitle {
+    font-size: 20px;
+  }
+
+  .back-button {
+    margin-bottom: 20px;
+  }
+
+  .camera-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+  }
+
+  div#interactive.viewport {
+    width: 300px;
+    height: 150px;
+  }
+  
+  video {
+    width: 300px;
+  }
+
+  .drawingBuffer {
+    display: none;
+  }
+}
+
+/* MOBILE LANDSCAPE */
+@media screen and (max-height: 500px) {
+  .title-container {
+    height: 20%;
+  }
+  .title-contents {
+    flex-direction: unset;
+    margin-top: 20px;
+  }
+  .title {
+    margin-top: unset;
+    font-size: 30px;
+  }
+  .subtitle {
+    font-size: 30px;
+  }
+
+  .home {
+    display: flex;
+  }
+
+  .home button {
+    width: 200px;
+    height: 100px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+  }
+
+  .barcode-scan-container {
+    margin-right: 50px;
+  }
+
+  .home button span svg {
+    width: 250px;
+  }
+
+  .home button p {
+    font-size: 20px;
+  }
+
+  .camera-box {
+    display: flex;
+    margin: unset;
+  }
+
+  .back-button {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .back-button button {
+    width: 35px;
+    height: 30px;
+    left: 0;
+  }
+
+  .back-button button svg {
+    font-size: 20px;
+  }
+
+  div#interactive.viewport {
+    width: 300px;
+    height: 150px;
+  }
+  
+  video {
+    width: 300px;
   }
 }
